# CarbonDriver_rebuild

./: .gitignore  carbondriver_outline.md  config.py  environment.yml  evaluate_carbondriver.py  pyproject.toml  test_complete_physics_model.py  test_ensemble_api.py  test_gp_unnormalized.py  test_mlp_ensemble.py  test_mlp_unnormalized.py  test_ph_ensemble.py  test_physics_model.py  test_physics_model_unnormalized.py  test_triplet_handling.py
Old_files/: loaders.py
Tests/: test_api_v2.py  test_data_loader.py  test_deep_ph_gp_debug.py  test_ensemble_api.py  test_full_mlp_ensemble.py  test_gp_models.py  test_ph_gp_debug.py  test_physics_model.py  test_triplet_handling.py
data/: __init__.py  loader.py
models/: __init__.py  ensemble_optimization.py  ensemble_optimization_para.py  ensemble_optimizer.py  gde_system.py  gp_ensemble.py  gp_model.py  mlp_ensemble.py  ph_ensemble.py  physics_model.py
