[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carbondriver"
description = "Physics-based active learning tools for CO2 reduction experiments"
version = "0.2.0"
authors = [
    { name="Ivan Grega", email="grega.ivan@gmail.com" },
]
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0.0",
    "gpytorch>=1.9.0",
    "botorch>=0.8.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "openpyxl>=3.0.0",
    "rich>=12.0.0",
    "scikit-learn>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
